@@ -1,59 +1,58 @@
 package com.edutie.backend.domain.education;
 
-import com.edutie.backend.domain.administration.administrator.Administrator;
-import com.edutie.backend.domain.administration.administrator.identities.AdministratorId;
 import com.edutie.backend.domain.administration.UserId;
+import com.edutie.backend.domain.administration.administrator.Administrator;
+import com.edutie.backend.domain.common.generationprompt.PromptFragment;
 import com.edutie.backend.domain.education.educator.Educator;
 import com.edutie.backend.domain.education.educator.enums.EducatorType;
 import com.edutie.backend.domain.education.learningrequirement.LearningRequirement;
-import com.edutie.backend.domain.studyprogram.science.Science;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.context.*;
 
 @SpringBootTest
 public class LearningRequirementTests {
-    private final UserId userId = new UserId();
-    private final Administrator administrator = Administrator.create(new UserId());
-    private final Educator educator = Educator.create(userId, administrator);
+	private final UserId userId = new UserId();
+	private final Administrator administrator = Administrator.create(new UserId());
+	private final Educator educator = Educator.create(userId, administrator);
 
-    @BeforeEach
-    public void testSetup() {
-        educator.setType(EducatorType.ADMINISTRATOR);
-    }
+	@BeforeEach
+	public void testSetup() {
+		educator.setType(EducatorType.ADMINISTRATOR);
+	}
 
-    @Test
-    public void subRequirementsAppendTest() {
-        LearningRequirement learningRequirement = LearningRequirement.create(educator);
-        learningRequirement.appendSubRequirement("R1");
-        learningRequirement.appendSubRequirement("R2");
-        learningRequirement.appendSubRequirement("R3");
+	@Test
+	public void subRequirementsAppendTest() {
+		LearningRequirement learningRequirement = LearningRequirement.create(educator);
+		learningRequirement.appendSubRequirement("R1", PromptFragment.of(""));
+		learningRequirement.appendSubRequirement("R2", PromptFragment.of(""));
+		learningRequirement.appendSubRequirement("R3", PromptFragment.of(""));
 
-        assert learningRequirement.getSubRequirements().get(0).getDescription().text().equals("R1");
-        assert learningRequirement.getSubRequirements().get(2).getDescription().text().equals("R3");
-    }
+		assert learningRequirement.getSubRequirements().get(0).getRequirementText().text().equals("R1");
+		assert learningRequirement.getSubRequirements().get(2).getRequirementText().text().equals("R3");
+	}
 
-    @Test
-    public void subRequirementsInsertTest() {
-        LearningRequirement learningRequirement = LearningRequirement.create(educator);
-        learningRequirement.appendSubRequirement("R1");
-        learningRequirement.appendSubRequirement("R2");
-        learningRequirement.appendSubRequirement("R3");
-        assert learningRequirement.insertSubRequirement("Hello!", 1).isSuccess();
+	@Test
+	public void subRequirementsInsertTest() {
+		LearningRequirement learningRequirement = LearningRequirement.create(educator);
+		learningRequirement.appendSubRequirement("R1", PromptFragment.of(""));
+		learningRequirement.appendSubRequirement("R2", PromptFragment.of(""));
+		learningRequirement.appendSubRequirement("R3", PromptFragment.of(""));
+		assert learningRequirement.insertSubRequirement("Hello!", PromptFragment.of(""), 1).isSuccess();
 
-        assert learningRequirement.getSubRequirements().get(1).getDescription().text().equals("Hello!");
-    }
+		assert learningRequirement.getSubRequirements().get(1).getRequirementText().text().equals("Hello!");
+	}
 
-    @Test
-    public void subRequirementDeleteTest() {
-        LearningRequirement learningRequirement = LearningRequirement.create(educator);
-        learningRequirement.appendSubRequirement("R1");
-        learningRequirement.appendSubRequirement("R2");
-        learningRequirement.appendSubRequirement("R3");
-        assert learningRequirement.getSubRequirements().size() == 3;
+	@Test
+	public void subRequirementDeleteTest() {
+		LearningRequirement learningRequirement = LearningRequirement.create(educator);
+		learningRequirement.appendSubRequirement("R1", PromptFragment.of(""));
+		learningRequirement.appendSubRequirement("R2", PromptFragment.of(""));
+		learningRequirement.appendSubRequirement("R3", PromptFragment.of(""));
+		assert learningRequirement.getSubRequirements().size() == 3;
 
-        assert learningRequirement.removeSubRequirement(0).isSuccess();
-        assert learningRequirement.getSubRequirements().get(0).getDescription().text().equals("R2");
-    }
+		assert learningRequirement.removeSubRequirement(0).isSuccess();
+		assert learningRequirement.getSubRequirements().getFirst().getRequirementText().text().equals("R2");
+	}
 
 }
